source/stylesheets/pages/_blog.scss
.no-blog-image-title {
  padding-top: 30px;
}

pre {
  margin-bottom: 20px;

  code {
    word-wrap: normal;
  }
}

.line {
  white-space: pre;
  overflow: scroll;
}

.entry {
  background: none repeat scroll 0 0 $color-white;
  border: 1px solid rgba($color-dark, .1);
  margin: 0 0 30px;
  padding: 10px;
}

.blog-article {
  margin-bottom: 60px;
  background: $color-white;
  padding: 25px;
  box-shadow: 0 3px 3px rgba($color-dark, .1);
}

.blog-entry,
.md-page {
  margin-right: auto;
  margin-left: auto;
  max-width: 900px;
  font-size: 16px;
  word-wrap: break-word;

  .author {
    display: inline;
    font-weight: 600;

    a {
      font-weight: 600;
      line-height: normal;
    }
  }

  .date {
    color: $blog-date-color;
    font-weight: 300;
    font-size: 16px;
    margin-left: 4px;
    margin-top: 10px;
    padding-bottom: 10px;
  }

  .panel-heading {
    a {
      font-size: inherit;
    }
  }

  li {
    color: $blog-text-color;
    padding-bottom: 4px;
  }

  .image-title h1 a {
    color: $color-white;
    font-weight: 600;
    font-size: 40px;
  }

  h1 {
    margin-bottom: 0;

    &.image-title {
      font-size: 30px;
      color: $color-white;
      font-weight: 600;
      line-height: 40px;
    }

    a {
      font-size: 30px;
      color: $blog-text-color;
      font-weight: 600;
      line-height: 41px;
    }
  }

  h1,
  h2,
  h3,
  h4,
  h5 {
    color: $blog-text-color;
    font-weight: 600;
    margin-top: 0;
  }

  h2 {
    font-size: 35px;
    margin-top: 45px;
  }

  h3 {
    font-size: 30px;
    color: $blog-text-color;
    font-weight: 200;
    padding-top: 12px;
  }

  p {
    color: $blog-text-color;
    line-height: 1.5;
    margin: 0 0 20px;

    &.note {
      font-size: 14px;
      font-style: italic;
      color: $blog-notes-color;
    }
  }

  blockquote {
    p {
      font-size: 16px;
      font-style: normal;
      color: $blog-notes-color;
    }
  }

  .table-responsive {
    margin-bottom: 0;
    border: 0;
  }
}

.image-title .color-bg {
  position: relative;
  display: block;
  padding: 200px 40px;
  margin-top: 0;
  color: $color-white;
  font-weight: 600;
  font-size: 55px;
  text-align: center;
  height: 500px;
  background: linear-gradient(-225deg, rgba($color-primary, .8) 0%, rgba($blog-image-color-to, .92) 100%);

  h1 {
    margin: 0;
    color: $color-white;
    font-size: 55px;
    line-height: 1;
  }

  h3 {
    font-size: 40px;
    color: $color-white;
  }
}

.image-title a:hover {
  text-decoration: none;
}

.rss-button {
  position: relative;
  float: right;
  right: 0;
  top: 0;
}

.blog-index .toplink {
  font-size: 14px;
  line-height: auto;
  font-weight: 600;
}

.newsletter .newsletter-preamble {
  float: left;
  line-height: 30px;
  font-size: 1.7rem;
  font-weight: 600;
}

// scss-lint:disable SelectorFormat
.newsletter .mktoForm {
  display: inline-block;
}
// scss-lint:enable SelectorFormat

.newsletter .newsletter-form {
  width: auto;
  float: right;
}

.newsletter .sbmc {
  width: 100px;
}

.blog-title-divider {
  border-width: 4px;
  border-color: $blog-divider-color;
  margin: -5px 0 10px;
}

.blog-index.blog-entry {
  margin-top: 40px;
}

.post-list {
  font-size: 16px;
  list-style: none;
  margin: 0 0 20px;
  padding: 0 20px;
  clear: both;
}

.post-list-item {
  border-bottom: 1px solid $color-gray-medium;
  margin: 0 0 5px;
  padding: 0 0 5px;
  overflow: hidden;

  a {
    &:visited {
      color: $color-primary;
    }
  }

  > time {
    color: $blog-date-color;
    display: inline-block;
    float: right;
    font-size: 14px;
    white-space: nowrap;
  }
}

.download-partial {
  width: 100%;
  border-radius: 5px;
  padding: 18px;
  padding-top: 23px;
  background: $color-primary;
  color: $color-white;
  font-size: 24px;
  margin: 30px 0;

  a {
    position: relative;
    padding: 9px 22px 5px;
    border: 2px solid $color-white;
    font-size: 20px;
    border-radius: 7px;
    top: -9px;
    float: right;
    color: $color-white;
    transition: all .2s;

    &:hover {
      background: $color-white;
      color: $color-primary;
      text-decoration: none;
    }
  }
}

.code pre {
  overflow-x: auto;
  width: 676px;
}

.gutter .line-numbers {
  width: 100%;
}

.full-post {
  background: $color-white;
}

// scss-lint:disable all
.newsletter-form div {
  display: inline;
}

.newsletter-form .mktoForm {
  width: auto !important;
}

.newsletter-form .mktoFieldWrap {
  float: none !important;
  margin-right: 5px !important;
}

.newsletter-form .mktoField {
  background-color: $color-white;
  background-image: none;
  border-radius: 4px !important;
  border: 1px solid #ccc !important;
  box-shadow: none !important;
  color: #555;
  display: block;

  font-size: 14px;
  height: 34px;
  line-height: 1.42857143;
  padding: 6px 12px !important;
  width: 100%;
}

.newsletter-form .mktoButtonWrap {
  margin: 0 !important;
}

.newsletter-form .mktoButton {
  background-color: $color-white;
  background-image: none;
  border-radius: 4px;
  border: 1px solid #ccc;
  cursor: pointer;
  display: inline-block;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.42857143;
  margin-bottom: 0;
  padding: 7px 12px 6px 12px !important;
  text-align: center;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
}

.newsletter-form .mktoButton:hover {
  background-color: #e6e6e6;
  border-color: #adadad;
  color: #333;
}

.newsletter-form .mktoAsterix,
.newsletter-form .mktoGutter,
.newsletter-form .mktoLabel,
.newsletter-form .mktoOffset {
  display: none;
  width: 0;
}

.newsletter-form .mktoFormCol {
  margin: 0;
}

.newsletter-form .mktoClear,
.newsletter-form .mktoFormRow {
  clear: none;
}
//scss-lint:enable all

@media (min-width: 481px) and (max-width: 766px) {
  .image-title .color-bg {
    padding: 50px 40px;
    height: 250px;
  }

  .image-title .color-bg h1 {
    font-size: 30px;
    line-height: normal;
  }
}

@media (max-width: 480px) {
  .image-title .color-bg {
    padding: 50px 40px;
    height: 250px;
  }

  .image-title .color-bg h1 {
    font-size: 30px;
    line-height: normal;
  }
}

.image-title-small {
  .color-bg {
    height: auto;
    padding-top: 40px;
    padding-bottom: 40px;

    @media (max-width: 480px) {
      min-height: auto;
      padding-top: 20px;
      padding-bottom: 20px;
    }
  }
}

.blog-image {
  background-size: cover;
  background-position: center center;
  background-repeat: no-repeat;
}

.note {
  font-size: 14px;
  font-style: italic;
  color: $blog-notes-color;
}

//scss-lint:disable SelectorFormat
.video_container {
  position: relative;
  padding-bottom: 56.25%;
  padding-top: 0;
  height: 0;

  iframe,
  video {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
  }
}
//scss-lint:enable SelectorFormat

